JPERF-254: JStack after TravisCI failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ jdk:
 
 script:
   - ./gradlew testAcceptance --scan -s
+
+after_failure:
+  - for jvm in $(jps -q); do echo "--- JSTACK FOR $jvm:"; jstack $jvm; done
